<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/itemEditText"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/itemInput"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/amountInputText"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemEditText" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/priceInputText"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

        <EditText
            android:id="@+id/eventEditText"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/eventInputText"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceEditText" />

        <EditText
            android:id="@+id/receiverEditText"
            android:layout_width="277dp"
            android:layout_height="51dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/receiverInputText"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventEditText" />

        <CheckBox
            android:id="@+id/boughtCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/boughtCheckBoxText"
            android:textSize="18sp"
            android:textColor="@color/mainFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receiverEditText" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addButtonText"
            android:textSize="20sp"
            android:textColor="@color/mainFontColor"
            android:background="@drawable/custom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boughtCheckBox"
            app:layout_constraintVertical_bias="0.228" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>