<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ViewItemActivity"
    android:id="@+id/viewItemLayout"
    >
    <EditText
        android:id="@+id/itemEditText"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/itemInput"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/itemInput"/>

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/amountInputText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemEditText"
        android:autofillHints="@string/amountInputText"/>

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/priceInputText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountEditText"
        android:autofillHints="@string/priceInputText"/>

    <EditText
        android:id="@+id/eventEditText"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/eventInputText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText"
        android:autofillHints="@string/eventInputText" />

    <EditText
        android:id="@+id/receiverEditText"
        android:layout_width="277dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/receiverInputText"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventEditText"
        android:autofillHints="@string/receiverInputText"/>

    <CheckBox
        android:id="@+id/boughtCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/boughtCheckBoxText"
        android:textSize="18sp"
        android:textColor="@color/mainFontColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverEditText" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:background="@drawable/custom_button"
        android:text="@string/editButtonText"
        android:textColor="@color/mainFontColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBtn"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boughtCheckBox"
        app:layout_constraintVertical_bias="0.285" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:background="@drawable/custom_button"
        android:text="@string/checkBtnText"
        android:textColor="@color/mainFontColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boughtCheckBox"
        app:layout_constraintVertical_bias="0.285" />


</androidx.constraintlayout.widget.ConstraintLayout>